added namespace to urls and url in list.html is now by namespace

--- a/book_list_django/book_list/templates/book_list/list.html
+++ b/book_list_django/book_list/templates/book_list/list.html
@@ -8,7 +8,7 @@
 {% if book_list %}
 <ul>
     {% for book in book_list %}
-    <li><a href="/book_list/{{ book.id }}/detail/">{{ book.book_name }}</a></li>
+    <li><a href="{% url 'book_list:detail' book.id %}">{{ book.book_name }}</a></li>
     {% endfor %}
 </ul>
 {% else %}
